kubernetes/apps/network/envoy-gateway/config/nas.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nas
spec:
  clusterIP: None
  ports:
    - name: https
      appProtocol: https
      protocol: TCP
      port: 443
      targetPort: 443
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: nas
  labels:
    kubernetes.io/service-name: nas
addressType: IPv4
endpoints:
  - addresses:
      - ${SECRET_NAS_IP}
    conditions:
      ready: true
ports:
  - name: https
    appProtocol: https
    protocol: TCP
    port: 443
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nas
spec:
  hostnames:
    - nas.${SECRET_DOMAIN}
  parentRefs:
    - name: envoy-internal
      sectionName: https
  rules:
    - backendRefs:
        - name: nas
          port: 443
